2007-06-09  George Giolfan  <georgegiolfan@yahoo.com>

	* StackPanel.cs: Fixed MeasureOverride, removed wrong metadata overrides.

2007-06-09  George Giolfan  <georgegiolfan@yahoo.com>

	* StackPanel.cs: Minor improvement in MeasureOverride, finished MakeVisible.

2007-06-08  George Giolfan  <georgegiolfan@yahoo.com>

	* StackPanel.cs: Fixed layout.

2007-06-08  George Giolfan  <georgegiolfan@yahoo.com>

	* StackPanel.cs: Implemented most of IScrollInfo.

2007-06-06  George Giolfan  <georgegiolfan@yahoo.com>

	* StackPanel.cs: Fixed ArrangeOverride.

2007-06-06  George Giolfan  <georgegiolfan@yahoo.com>

	* StackPanel.cs: Started implementing IScrollInfo.

2007-06-06  George Giolfan  <georgegiolfan@yahoo.com>

	* StackPanel.cs: Fixed layout.

2007-06-06  George Giolfan  <georgegiolfan@yahoo.com>

	* StackPanel.cs: Wrong fix that makes the sample work properly.

2007-06-06  George Giolfan  <georgegiolfan@yahoo.com>

	* StackPanel.cs: Fixed ArrangeOverride.

2007-06-05  George Giolfan  <georgegiolfan@yahoo.com>

	* StackPanel.cs: Attempted an implementation of ArrangeOverride, MeasureOverride.

2007-06-05  George Giolfan  <georgegiolfan@yahoo.com>

	* StackPanel.cs: Implemented LogicalOrientation, HasLogicalOrientation.

2007-06-05  George Giolfan  <georgegiolfan@yahoo.com>

	* StackPanel.cs: Added.

2007-06-05  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControl.cs: Disabled some code that caused an exception.

2007-06-05  George Giolfan  <georgegiolfan@yahoo.com>

	* Button.cs: Some cleaning.

2007-06-04  George Giolfan  <georgegiolfan@yahoo.com>

	* DockPanel.cs: Fixed MeasureOverride.

2007-06-03  George Giolfan  <georgegiolfan@yahoo.com>

	* DockPanel.cs: Attempted to fix MeasureOverride.

2007-06-03  George Giolfan  <georgegiolfan@yahoo.com>

	* DockPanel.cs: Fixed MeasureOverride, ArrangeOverride.

2007-06-03  George Giolfan  <georgegiolfan@yahoo.com>

	* DockPanel.cs: Implemented MeasureOverride, ArrangeOverride.
	