@@ -1,0 +1,54 @@
+using System.ComponentModel;
+#if Implementation
+using System.Windows;
+using System.Windows.Controls;
+namespace Mono.System.Windows.Controls {
+#else
+namespace System.Windows.Controls {
+#endif
+	public class WrapPanel : Panel {
+		#region Public Fields
+		#region Dependency Properties
+		public static readonly DependencyProperty ItemHeightProperty = DependencyProperty.Register("ItemHeight", typeof(double), typeof(WrapPanel), new FrameworkPropertyMetadata(double.NaN, FrameworkPropertyMetadataOptions.AffectsMeasure));
+		public static readonly DependencyProperty ItemWidthProperty = DependencyProperty.Register("ItemWidth", typeof(double), typeof(WrapPanel), new FrameworkPropertyMetadata(double.NaN, FrameworkPropertyMetadataOptions.AffectsMeasure));
+		public static readonly DependencyProperty OrientationProperty = DependencyProperty.Register("Orientation", typeof(Orientation), typeof(WrapPanel), new FrameworkPropertyMetadata(Orientation.Horizontal, FrameworkPropertyMetadataOptions.AffectsMeasure));
+		#endregion
+		#endregion
+
+		#region Public Constructors
+		public WrapPanel() {
+		}
+		#endregion
+
+		#region Public Properties
+		#region Dependency Properties
+		[TypeConverter(typeof(LengthConverter))]
+		public double ItemHeight {
+			get { return (double)GetValue(ItemHeightProperty); }
+			set { SetValue(ItemHeightProperty, value); }
+		}
+
+		[TypeConverter(typeof(LengthConverter))]
+		public double ItemWidth {
+			get { return (double)GetValue(ItemWidthProperty); }
+			set { SetValue(ItemWidthProperty, value); }
+		}
+
+		public Orientation Orientation {
+			get { return (Orientation)GetValue(OrientationProperty); }
+			set { SetValue(OrientationProperty, value); }
+		}
+		#endregion
+		#endregion
+
+		#region Protected Methods
+		protected override Size ArrangeOverride(Size finalSize) {
+			return base.ArrangeOverride(finalSize);
+		}
+
+		protected override Size MeasureOverride(Size availableSize) {
+			return base.MeasureOverride(availableSize);
+		}
+		#endregion
+	}
+}
